# fast_zero

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routes/: auth.py  static.py  todos.py  users.py
fast_zero/templates/: index.html  list.html
migrations/: env.py
migrations/versions/: 567b8c6f2fb7_create_todos_table.py  91f64c6ca4eb_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
